reverted svix version to 1.42.0

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,8 @@
   --text-course-details-heading-large: 36px;
   --text-course-details-heading-large--line-height: 44px;
 
-  --text-home-heading-small: 28px;
-  --text-home-heading-small--line-height: 34px;
+  --text-home-heading-small: 38px;
+  --text-home-heading-small--line-height: 45px;
 
   --text-home-heading-large: 48px;
   --text-home-heading-large--line-height: 56px;
@@ -25,15 +25,37 @@
   --shadow-custom-card: 0px 4px 15px 2px rgba(0, 0, 0, 0.1);
 }
 
-*{
-  font-family: 'DM Sans', sans-serif;
-  @apply selection:bg-green-600 selection:text-white;
-}
-
 @layer base {
   html {
       scroll-behavior: smooth;
   }
+}
+
+@layer components {
+  .link-custom {
+    @apply transition duration-500 hover:text-green-600 cursor-pointer;
+  }
+
+  .link-custom-2 {
+    @apply transition duration-500 text-green-600 hover:text-green-500 cursor-pointer;
+  }
+
+  .button-custom {
+    @apply text-white font-semibold transition duration-500 bg-green-600 hover:bg-green-500 cursor-pointer;
+  }
+
+  .button-custom-2 {
+    @apply text-zinc-600 font-semibold transition duration-500 bg-zinc-300 hover:bg-zinc-200 cursor-pointer;
+  }
+
+  .button-custom-3 {
+    @apply text-zinc-600 font-medium transition duration-500 border border-zinc-300 hover:bg-zinc-100 cursor-pointer;
+  }
+}
+
+*{
+  font-family: 'DM Sans', sans-serif;
+  @apply selection:bg-green-600 selection:text-white;
 }
 
 ::-webkit-scrollbar {
